form add (whitout content)

--- a/index.html
+++ b/index.html
@@ -171,7 +171,31 @@
                 <h2 class="title-second-unit"> CONTACTEZ-NOUS </h2>
 
                 <div class="mainContentContact">
+                    <form action="" method="get" class="contact_form_index">
+                        <div class="scribeActionDiv">
+                            <label for="name"> Prénom: </label>
+                            <input type="text" name="name" id="name" required>
+                        </div>
 
+                        <div class="scribeActionDiv">
+                            <label for="lname"> Nom: </label>
+                            <input type="text" name="lname" id="lname" required>
+                        </div>
+
+                        <div class="scribeActionDiv">
+                            <label for="email"> Adresse Mail: </label>
+                            <input type="email" name="email" id="email" required>
+                        </div>
+
+                        <div class="scribeActionDiv">
+                            <label for="phone"> Téléphone: </label>
+                            <input type="tel" name="phone" id="phone" required>
+                        </div>
+
+                        <div class="scribeActionDiv">
+                            <input type="submit" value="Envoyer" class="submitButton"/>
+                        </div>
+                    </form>
                 </div>
             </div>
 
